# SGL

./: CMakeLists.txt  SGL.cpp  SGL.hpp  example.c  example.cpp  main.cpp  syntax_todo.txt  todo.txt
examples/: CMakeLists.txt  buildin_types_a.c  custom_types_a.c  example.c  example.cpp  function_example.c  interactive.cpp  string_example.c  variables.c
examples/data/: buildin_types_a.sgl  custom_types_a.sgl  variables.sgl
include/SGL/: CSGL.h  SGL.hpp  config.hpp  evaluator.hpp  function.hpp  operator_list.hpp  state.hpp  tokenizer.hpp  type.hpp  type_name.hpp  utils.hpp  value.hpp
src/: CSGL.cpp  SGL.cpp  function.cpp  sgl.cpp  tokenizer.cpp
